@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: TestVR.cxx,v $
   Language:  C++
-  Date:      $Date: 2004/11/16 04:28:20 $
-  Version:   $Revision: 1.2 $
+  Date:      $Date: 2005/01/06 17:16:15 $
+  Version:   $Revision: 1.3 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -22,8 +22,9 @@ int TestVR(int , char *[])
    gdcm::VR vr;
    // There should be 16 entries
    vr.Print( std::cout );
-   vr.IsVROfGdcmStringRepresentable( "" );
-   vr.IsVROfGdcmBinaryRepresentable( "" );
+   vr.IsVROfStringRepresentable( "" );
+   vr.IsVROfBinaryRepresentable( "" );
+   vr.IsVROfSequence( "" );
 
    return 0;
 }
