@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmVR.h,v $
   Language:  C++
-  Date:      $Date: 2005/01/06 13:35:38 $
-  Version:   $Revision: 1.15 $
+  Date:      $Date: 2005/01/06 17:16:16 $
+  Version:   $Revision: 1.16 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -46,8 +46,9 @@ public:
 
    void Print(std::ostream &os = std::cout);
    int Count(VRKey const & key);
-   bool IsVROfGdcmBinaryRepresentable(VRKey const & tested);
-   bool IsVROfGdcmStringRepresentable(VRKey const & tested);
+   bool IsVROfBinaryRepresentable(VRKey const & tested);
+   bool IsVROfStringRepresentable(VRKey const & tested);
+   bool IsVROfSequence(VRKey const & tested);
 
    bool IsValidVR(VRKey const & key);
 
